--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 							*;groupId=org.biopax.paxtools;type=!pom;inline=true;scope=compile|runtime,
 							*;artifactId=cpath-api;type=!pom;inline=true;scope=compile|runtime,
 							*;artifactId=cpath-client;type=!pom;inline=true;scope=compile|runtime,
-							*;groupId=org.springframework;type=!pom;inline=true;scope=runtime
+							*;groupId=org.springframework;type=!pom;inline=true;scope=compile|runtime
 						</Embed-Dependency>
 						<Import-Package>*;resolution:=optional</Import-Package>
 					</instructions>
@@ -121,6 +121,17 @@
 			<name>Cytoscape Releases</name>
 			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
 		</repository>
+		<repository>
+			<id>cytoscape_thirdparty</id>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Third Party</name>
+			<url>http://code.cytoscape.org/nexus/content/repositories/thirdparty/</url>
+		</repository>		
 	</repositories>
 
 
@@ -192,6 +203,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+            <groupId>cytoscape-temp</groupId>
+            <artifactId>woodstox-core-lgpl</artifactId>
+            <version>[4.0.5, 5.0.0)</version>
+        </dependency>
+		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.core</artifactId>
 			<version>${osgi.api.version}</version>
@@ -216,6 +232,11 @@
 			<artifactId>biopax-converter</artifactId>
 			<version>4.1.5-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.biopax.paxtools</groupId>
+			<artifactId>sif-converter</artifactId>
+			<version>4.1.5-SNAPSHOT</version>
+		</dependency>
 		<!-- Spring Dependencies to embed (temporary; must use/start Spring EBR 
 			bundles instead) -->
 		<dependency>
@@ -228,7 +249,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -240,7 +260,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
