--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,22 @@
 			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
 		</repository>
 		<repository>
+			<id>biopax.snapshots</id>
+			<name>BioPAX Snapshots Repository at Sourceforge</name>
+			<url>http://biopax.sourceforge.net/m2repo/snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>biopax.releases</id>
+			<name>BioPAX Repository at Sourceforge</name>
+			<url>http://biopax.sourceforge.net/m2repo/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>cytoscape_thirdparty</id>
 			<snapshots>
 				<enabled>false</enabled>
@@ -143,7 +159,7 @@
 			</releases>
 			<name>Cytoscape Third Party</name>
 			<url>http://code.cytoscape.org/nexus/content/repositories/thirdparty/</url>
-		</repository>		
+		</repository>
 	</repositories>
 
 
