Fixed the issue #10
Created a new button in the Top Pathways panel and moved the list/info
initialization code there.

--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 		<bundle.namespace>org.cytoscape.cpathsquared</bundle.namespace>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<cytoscape.version>3.0.0-beta2</cytoscape.version>
+		<cytoscape.version>[3.0.0-beta2, 4.0.0)</cytoscape.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
 	</properties>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cpathsquared-impl</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.2-SNAPSHOT</version>
 	<name>CyPath2</name>
 	<description>CyPath2 is a Cytoscape 3 GUI client app 
 	that connects to a cPath2 (cPathSquared) web service (default URL is http://www.pathwaycommons.org/pc2/,
@@ -177,61 +177,61 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>io-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>layout-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-util-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>swing-application-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>webservice-swing-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>service-api</artifactId>
-			<version>[${cytoscape.version}, 4.0.0)</version>
+			<version>${cytoscape.version}</version>
 			<scope>provided</scope>
 		</dependency>		
 		<dependency>
