--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<groupId>org.cytoscape</groupId>
+	<groupId>org.pathwaycommons</groupId>
 	<properties>
-		<bundle.namespace>org.cytoscape.cpathsquared</bundle.namespace>
+		<bundle.namespace>org.pathwaycommons.cypath2</bundle.namespace>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cytoscape.version>[3.0.0, 4)</cytoscape.version>
 		<spring.version>3.2.2.RELEASE</spring.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
 		<paxtools.version>4.2.0-SNAPSHOT</paxtools.version>
-		<cpath-client.version>4.1.0-SNAPSHOT</cpath-client.version>
+		<cpath-client.version>4.0.0-SNAPSHOT</cpath-client.version>
 	</properties>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cpathsquared-impl</artifactId>
-	<version>0.1.5-SNAPSHOT</version>
+	<artifactId>cypath2-impl</artifactId>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>CyPath2</name>
 	<description>CyPath2 is a Cytoscape 3 GUI client app 
 	that connects to a cPath2 (cPathSquared) web service (default URL is http://www.pathwaycommons.org/pc2/,
@@ -50,7 +50,7 @@
 					<archive>
 						<manifestEntries>
 							<Cytoscape-App-Name>CyPath2</Cytoscape-App-Name>
-                            <Cytoscape-App-Version>0.1</Cytoscape-App-Version>
+                            <Cytoscape-App-Version>0.2</Cytoscape-App-Version>
                             <Cytoscape-API-Compatibility>3.0</Cytoscape-API-Compatibility>
 						</manifestEntries>
 					</archive>
@@ -63,7 +63,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-SymbolicName>org.cytoscape.cpathsquared-impl</Bundle-SymbolicName>
+						<Bundle-SymbolicName>org.pathwaycommons.cypath2-impl</Bundle-SymbolicName>
 						<Bundle-Name>CyPath2</Bundle-Name>
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
